--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -1,25 +1,44 @@
-26/8/2012 Not yet released
+7 Sep 2012 Not yet released
 
+Breaking changes from Version 0.4
+---------------------------------
+The API has been overhauled in preparation for the first official release. The breaking changes are:
+Bollywell.Messaging.Config renamed to Bollywell.Messaging.Storage.
+XXXConfigProvider classes renamed to XXXProvider. (I toyed with XXXCloud, but that will date quickly.)
+Poller renamed to Listener and IHydraService.GetPoller to IHydraService.GetListener.
+The various bufferDelayMs and pollIntervalMs method parameters are now properties on a new ListenerOptions class, which can optionally be provided to the HydraService constructor, to apply to all Listeners on that service, or to the GetListener method, to apply to just that Listener.
+
+
+Other changes
+-------------
 Updated Erlang UUID code to match the official CouchDb source.
 Improved MessageId management to allow any suffix, rather than just two-byte hex strings.
-Added PreferenceOrderConfigProvider.
-Created IStore interface and ConfigProvider constructors, and replaced timers with Schedulers, to help with testing. Created some tests.
+Added PreferenceOrderProvider.
+Created IStore interface and Provider constructors, and replaced timers with Schedulers, to help with testing. Created some tests.
 Upgraded to Rx 2.0.
 
+------------------------------------------------------------------------------------------------------------------------------
+------------------------------------------------------------------------------------------------------------------------------
 
-30/7/2012 Version 0.4
+30 Jul 2012 Version 0.4
 
 The first beta release of Hydra. Full source code is in hydra0.4.source.zip. Binaries and CouchDb setup information only are in hydra0.4.dist.zip. These correspond to the Git repository tag v0.4.
 
 The main change is the addition of NearestServerConfigProvider, which gives failover and failback functionality. There have also been some improvements to the Scavenger Service, and several components are more configurable.
 
-13/6/2012 Version 0.3
+------------------------------------------------------------------------------------------------------------------------------
+------------------------------------------------------------------------------------------------------------------------------
+
+13 Jun 2012 Version 0.3
 
 The third release of Hydra. Full source code is in hydra0.3.source.zip. Binaries and CouchDb setup information only are in hydra0.3.dist.zip. These correspond to the Mercurial repository tag v0.3.
 
 The main change is the addition of the Stress Tester example application. This has been used to run Hydra at over 2,000,000 messages per day for extended periods to determine server load and see if CouchDb is up to the job. Useful for testing your own setup and as an example of the use of multiple message types to communicate between apps.
 
-9/5/2012 Version 0.2
+------------------------------------------------------------------------------------------------------------------------------
+------------------------------------------------------------------------------------------------------------------------------
+
+9 May 2012 Version 0.2
 
 The second public release of Hydra. Full source code is in hydra0.2.source.zip. Binaries and CouchDb setup information only are in hydra0.2.dist.zip. These correspond to the Mercurial repository tag v0.2.
 
@@ -27,6 +46,9 @@ The primary change from v0.1 is to remove the static Services class and replace 
 
 As Services has gone, there are breaking changes from v0.1 in this distribution - the documentation has been updated to match the new code, so please see the examples for use of HydraService. While messages can be sent and received between v0.1 and v0.2 applications, v0.1 code will not compile with v0.2 binaries and vice versa.
 
-28/4/2012 Version 0.1
+------------------------------------------------------------------------------------------------------------------------------
+------------------------------------------------------------------------------------------------------------------------------
+
+28 Apr 2012 Version 0.1
 
 The first public release of Hydra. Full source code is in hydra0.1.source.zip. Binaries and CouchDb setup information only are in hydra0.1.dist.zip. These correspond to the Mercurial repository tag v0.1.
